@@ -106,13 +106,9 @@ class DdlPythonInterfaces ( object ) :
         self.cppname = cppname
         self.incdirname = backend_options.get('gen-incdir', "")
         self.top_pkg = backend_options.get('top-package')
+        self.psana_inc = backend_options.get('psana-inc', "psddl_psana")
         self.psana_ns = backend_options.get('psana-ns', "Psana")
         self.generics = {}
-
-        #include guard
-        g = os.path.split(self.incname)[1]
-        if self.top_pkg: g = self.top_pkg + '_' + g
-        self.guard = g.replace('.', '_').upper()
 
     #-------------------
     #  Public methods --
@@ -121,63 +117,26 @@ class DdlPythonInterfaces ( object ) :
     def parseTree ( self, model ) :
         
         # open output files
-        self.inc = file(self.incname, 'w')
         self.cpp = file(self.cppname, 'w')
 
         warning = "/* Do not edit this file, as it is auto-generated */\n"
-        print >>self.inc, warning
         print >>self.cpp, warning
 
-        # include guard to header
-        print >>self.inc, "#ifndef", self.guard 
-        print >>self.inc, "#define", self.guard, "1"
-        print >>self.inc, ""
-
-        inc = os.path.join(self.incdirname, os.path.basename(self.incname))
-        inc_base = self.incname
-        index = inc_base.rfind("/")
-        if index != -1:
-            inc_base = inc_base[index+1:]
-            print inc_base
-
         # add necessary includes to include file
-        print >>self.inc, '#include <vector>'
-        print >>self.inc, '#include "psddl_python/DdlWrapper.h"'
-        print >>self.inc, '#include "psddl_python/Converter.h"'
-        print >>self.inc, '#include "ndarray/ndarray.h"'
-        print >>self.inc, '#include "pdsdata/xtc/TypeId.hh"'
-        inc_psana = "psddl_psana/" + string.replace(inc_base, ".wrapper", "")
-        print >>self.inc, '#include "%s" // inc_psana' % inc_psana
-        print >>self.inc, ""
-
-        # add necessary includes to source file
         print >>self.cpp, '#include <boost/make_shared.hpp>'
-        inc_python = "psddl_python/" + inc_base
-        print >>self.cpp, '#include "%s" // inc_python' % inc_python
+        print >>self.cpp, '#include "ndarray/ndarray.h"'
+        print >>self.cpp, '#include "pdsdata/xtc/TypeId.hh"'
+        inc = os.path.join(self.psana_inc, os.path.basename(self.incname))
+        print >>self.cpp, '#include "%s" // inc_psana' % inc
+        print >>self.cpp, '#include "psddl_python/Converter.h"'
+        print >>self.cpp, '#include "psddl_python/DdlWrapper.h"'
         print >>self.cpp, '#include "psddl_python/ConverterMap.h"'
         print >>self.cpp, '#include "psddl_python/ConverterBoostDef.h"'
-        print >>self.cpp, '#include "psddl_python/ConverterBoostDefWrap.h"'
+        print >>self.cpp, '#include "psddl_python/ConverterBoostDefSharedPtr.h"'
         print >>self.cpp, ""
-
-        # headers for other included packages
-        for use in model.use:
-            path = use['file']
-            headers = use['cpp_headers']
-            if not headers:
-                header = os.path.splitext(path)[0] + '.h'
-                header = os.path.join(self.incdirname, os.path.basename(header))
-                headers = [header]
-            for header in headers:
-                if "/" in header:
-                    print >>self.inc, "#include <%s>" % header
-                else:
-                    print >>self.inc, "#include <psddl_psana/%s>" % header
-                    wrapper_header = header[:len(header)-1] + "wrapper.h"
-                    print >>self.inc, "#include <psddl_python/%s>" % wrapper_header
 
         if self.top_pkg : 
             print >>self.cpp, T("namespace $top_pkg {")[self]
-            print >>self.inc, T("namespace $top_pkg {")[self]
 
         # loop over packages in the model
         for pkg in model.packages() :
@@ -186,14 +145,9 @@ class DdlPythonInterfaces ( object ) :
                 self._parsePackage(pkg)
 
         if self.top_pkg : 
-            print >>self.inc, T("} // namespace $top_pkg")[self]
             print >>self.cpp, T("} // namespace $top_pkg")[self]
 
-        # close include guard
-        print >>self.inc, "#endif //", self.guard
-
         # close all files
-        self.inc.close()
         self.cpp.close()
 
     def namespace_prefix(self):
@@ -205,22 +159,21 @@ class DdlPythonInterfaces ( object ) :
         self.pkg = pkgX
 
         # open namespaces
-        print >>self.inc, T("namespace $name {")[self.pkg]
-        print >>self.inc, ""
-        print >>self.inc, "using namespace boost::python;"
-        print >>self.inc, "using boost::python::api::object;"
-        print >>self.inc, "using boost::shared_ptr;"
-        print >>self.inc, "using std::vector;"
-        print >>self.inc, ""
-        print >>self.inc, "void createWrappers(PyObject* module);"
-
         print >>self.cpp, T("namespace $name {")[self.pkg]
+        print >>self.cpp, ""
+        print >>self.cpp, "using namespace boost::python;"
+        print >>self.cpp, "using boost::python::object;"
+        print >>self.cpp, "using boost::shared_ptr;"
+        print >>self.cpp, "using std::vector;"
         print >>self.cpp, ""
 
         print >>self.cpp, 'namespace {'
         print >>self.cpp, 'template <typename T>\nPyObject* method_typeid() {'
         print >>self.cpp, '  static PyObject* ptypeid = PyCObject_FromVoidPtr((void*)&typeid(T), 0);'
         print >>self.cpp, '  Py_INCREF(ptypeid);\n  return ptypeid;\n}'
+        print >>self.cpp, 'template<typename T, std::vector<int> (T::*MF)() const>'
+        print >>self.cpp, 'PyObject* method_shape(const T *x) {'
+        print >>self.cpp, '  return detail::vintToList((x->*MF)());\n}'
         print >>self.cpp, '} // namespace\n'
 
 
@@ -258,14 +211,16 @@ class DdlPythonInterfaces ( object ) :
 
 
         for type, ndim in ndconverters:
-            print >>self.cpp, T('  detail::register_ndarray_to_numpy_cvt<const $type, $ndim>();')(locals())
+            if ndim > 0:
+                print >>self.cpp, T('  detail::register_ndarray_to_numpy_cvt<const $type, $ndim>();')(locals())
+            else:
+                print >>self.cpp, T('  detail::register_ndarray_to_list_cvt<const $type>();')(locals())
 
         # end createWrappers()
         print >>self.cpp, ""
         print >>self.cpp, "} // createWrappers()"
 
         # close namespaces
-        print >>self.inc, T("} // namespace $name")[self.pkg]
         print >>self.cpp, T("} // namespace $name")[self.pkg]
 
     def _parseType(self, type, ndconverters):
@@ -278,21 +233,9 @@ class DdlPythonInterfaces ( object ) :
         self.codegen(type, ndconverters)
 
     def codegen(self, type, ndconverters):
-        # type is abstract by default but can be reset with tag "value-type"
-        abstract = not type.value_type
-
-        self._type = type
-        self._pkg_name = self.pkg.name
 
         logging.debug("codegen: type=%s", repr(type))
         #print "codegen: type=%s" % repr(type)
-
-        # declare config classes if needed
-        for cfg in type.xtcConfig:
-            print >>self.inc, T("class $name;")[cfg]
-
-        # base class
-        base = ""
 
         # this class (class being generated)
         wrapped = type.fullName('C++', self.psana_ns)
@@ -301,47 +244,30 @@ class DdlPythonInterfaces ( object ) :
         prefix = self.namespace_prefix()
         cname = type.name
         
-        if not abstract:
-            bclass = wrapped
-        else:
-            bclass = prefix + name
-        
-        print >>self.cpp, T('  class_<$bclass>("$cname", no_init)')(locals())
-
+        templ_args = [wrapped]
+        if type.base:
+            base = T('boost::python::bases<$base>')(base=type.base.fullName('C++', self.psana_ns))
+            templ_args.append(base)
         if not type.value_type:
-            # start class declaration
-            print >>self.inc, T("\nclass $name$base {")(name = name, base = base)
-            access = "private"
-    
-            # shared_ptr and C++ pointer to wrapped object
-            print >>self.inc, T("  shared_ptr<const $wrapped> m_obj;")(wrapped = wrapped)
-    
-            # enums for version and typeId
-            access = self._access("public", access)
-            if type.type_id is not None: 
-                print >>self.inc, T("  enum { TypeId = Pds::TypeId::$type_id };")(type_id=type.type_id)
-            if type.version is not None: 
-                print >>self.inc, T("  enum { Version = $version };")(version=type.version)
-    
-            # constructor
-            access = self._access("public", access)
-            print >>self.inc, T("  $name(const shared_ptr<const $wrapped>& obj) : m_obj(obj) {}")(locals())
+            holder = T('boost::shared_ptr<$wrapped>')(locals())
+            templ_args += [holder, "boost::noncopyable"]
+        templ_args = ', '.join(templ_args)
+        
+        pkgname = self.pkg.name
+        print >>self.cpp, T('  class_<$templ_args >("$cname", no_init)')(locals())
 
         # generate methods (for public methods and abstract class methods only)
         for method in type.methods(): 
-            if not type.value_type: access = self._access("public", access)
-            if not abstract or method.access == "public": self._genMethod(type, method, bclass, ndconverters)
+            if type.value_type or method.access == "public": self._genMethod(type, method, wrapped, ndconverters)
 
         # generate _shape() methods for array attributes
         for attr in type.attributes() :
-            if not type.value_type: access = self._access("public", access)
-            self._genAttrShapeAndListDecl(type, attr, bclass)
+            self._genAttrShapeAndListDecl(type, attr, wrapped)
 
         # close class declaration
         print >>self.cpp, T('    .def("__typeid__", &method_typeid<$wrapped>)')(locals())
         print >>self.cpp, T('    .staticmethod("__typeid__")')(locals())
         print >>self.cpp, '  ;'
-        if not type.value_type: print >>self.inc, "};"
 
         # generates converter instance
         type_id = "Pds::TypeId::"+type.type_id if type.type_id is not None else -1
@@ -349,37 +275,9 @@ class DdlPythonInterfaces ( object ) :
         if type.value_type:
             cvt_type = T('ConverterBoostDef<$wrapped> ')(locals()) 
         else:
-            cvt_type = T('ConverterBoostDefWrap<$wrapped, $bclass> ')(locals()) 
+            cvt_type = T('ConverterBoostDefSharedPtr<$wrapped> ')(locals()) 
         print >>self.cpp, T('  ConverterMap::instance().addConverter(boost::make_shared<$cvt_type>($type_id, $version));')(locals())
         print >>self.cpp, ""
-
-    def _access(self, newaccess, oldaccess):
-        if newaccess != oldaccess:
-            print >>self.inc, newaccess+":"
-        return newaccess
-        
-    def _genAttrDecl(self, attr):
-        """Generate attribute declaration"""
-        
-        logging.debug("_genAttrDecl: attr: %s", attr)
-        
-        doc = ""
-        if attr.comment : doc = T("\t/**< $comment */")(comment = attr.comment.strip())
-        
-        if not attr.shape :
-            if attr.isfixed():
-                decl = T("  $type\t$name;$doc")(type=_typename(attr.type), name=attr.name, doc=doc)
-            else:
-                decl = T("  //$type\t$name;")(type=_typename(attr.type), name=attr.name)
-        else:
-            if attr.isfixed():
-                dim = _interpolate(_dims(attr.shape.dims), attr.parent)
-                decl = T("  $type\t$name$shape;$doc")(type=_typename(attr.type), name=attr.name, shape=dim, doc=doc)
-            else :
-                dim = _interpolate(_dims(attr.shape.dims), attr.parent)
-                decl = T("  //$type\t$name$shape;")(type=_typename(attr.type), name=attr.name, shape=dim)
-        print >>self.inc, decl
-
 
     def _genMethod(self, type, method, bclass, ndconverters):
         """Generate method declaration and definition"""
@@ -399,8 +297,7 @@ class DdlPythonInterfaces ( object ) :
         if method.type is None:
             
             # method which does not return anything
-            rettype = 'void'
-            body = T('m_obj->$method_name($margs);')(locals())
+            pass
 
         elif not method.rank:
             
@@ -408,25 +305,14 @@ class DdlPythonInterfaces ( object ) :
             # non-basic types are returned by cref from wrapped method if method has 
             # corresponding attribute
             if method.attribute:
-                rettype = _typedecl(method.type, self.psana_ns)
                 policy = None if method.type.basic else "return_value_policy<copy_const_reference>()"
-            else:
-                rettype = _typename(method.type, self.psana_ns)
-            body = T('return m_obj->$method_name($margs);')(locals())
 
         elif method.type.name == 'char':
             
             # char array is actually a string
-            rettype = "const char*"
-            args = _dimargs(method.rank-1, type)
-            margs = ', '.join([_argdecl2(*arg) for arg in args])
-            body = T('return m_obj->$method_name($margs);')(locals())
+            pass
             
         elif method.type.value_type and method.type.basic:
-            
-            # wrapped method returns ndarray and we should convert it into numpy array
-            rettype = "PyObject*"
-            body = T('return detail::ndToNumpy(m_obj->$method_name($margs), m_obj);')(locals())
             
             # should also add boost converter for this ndarray type
             ctype = method.type.fullName('C++', self.psana_ns)
@@ -436,53 +322,24 @@ class DdlPythonInterfaces ( object ) :
         elif method.type.value_type:
 
             # wrapped method returns ndarray and we should convert it into regular Python list
-            rettype = "boost::python::list"
-            body = T('return detail::ndToList(m_obj->$method_name($margs));')(locals())
+            ctype = method.type.fullName('C++', self.psana_ns)
+            ndconverters.add((ctype, -1))
 
         else:
 
             # array of non-value types, method will accept a set of indices.
             # wrapped method returns a const reference to an object wholly "contained" 
             # in the wrapped object, so set policy correctly. 
-            rettype = _typename(method.type) + "_Wrapper"
-            ctype = method.type.fullName('C++', self.psana_ns)
-            args = _dimargs(method.rank, type)
-            margs = ', '.join([_argdecl2(*arg) for arg in args])
-            body = T('return $rettype(boost::shared_ptr<const $ctype>(m_obj, &m_obj->$method_name($margs)));')(locals())
-            policy = "return_value_policy<return_by_value, return_internal_reference<> >()"
+            policy = "return_internal_reference<>()"
 
-        self._genMethodWithBody(type, bclass, method_name, rettype, body, args=args, policy=policy)
+        self._genMethodDef(type, bclass, method_name, policy=policy)
 
 
-    def _genMethodWithBody(self, type, bclass, method_name, rettype, body, policy='', args=[], static=False):
+    def _genMethodDef(self, type, bclass, method_name, policy=''):
 
         policy = ', ' + policy if policy else ''
 
         print >>self.cpp, T('    .def("$method_name", &$bclass::$method_name$policy)')(locals())
-
-        # we do not generate wrappers for value types
-        if type.value_type: return
-
-        argsspec = ', '.join([_argdecl(*arg) for arg in args])
-
-        if static:
-            static = "static "
-            const = ""
-        else:
-            static = ""
-            const = "const"
-
-
-        if not body:
-
-            # declaration only, implementation provided somewhere else
-            print >>self.inc, T("  $static$rettype $method_name($argsspec) $const;")(locals())
-
-        else:
-            
-            # inline method
-            print >>self.inc, T("  $static$rettype $method_name($argsspec) $const { $body }")(locals())
-
 
     def isString(self, o):
         return type(o) == type("")
@@ -496,31 +353,7 @@ class DdlPythonInterfaces ( object ) :
 
         # generate shape method
         shape_method = attr.shape_method
-        body = 'boost::python::list res;'
-        body += T(' const vector<int>& sh=m_obj->$shape_method();')(locals())
-        body += ' for (vector<int>::const_iterator i = sh.begin(); i != sh.end(); ++ i) res.append(*i);'
-        body += ' return res;'
-        self._genMethodWithBody(type, bclass, shape_method, "boost::python::list", body)
-
-
-        dimensions = []
-        for dim in attr.shape.dims:
-            if self.isString(dim) and (('{xtc-config}' in dim) or ('{self}' in dim)):
-                dimensions.append(dim)
-
-        if len(dimensions) == 0:
-            return
-        if len(dimensions) > 2:
-            print "Error: cannot generate '%s' method: shape has more than 2 dimensions." % shape_method
-            sys.exit(1)
-
-        # now generate data_list() method if applicable.
-        shape_method = attr.shape_method
-        method_name = attr.accessor.name
-        list_method_name = method_name + "_list"
-        if not type.value_type: 
-            print >> self.inc, T("  boost::python::list ${list_method_name}() { boost::python::list l; const int n = m_obj->${shape_method}()[0]; for (int i = 0; i < n; i++) l.append(${method_name}(i)); return l; }")(locals())
-        print >>self.cpp, T('    .def("$list_method_name", &$bclass::$list_method_name)')(locals())
+        print >>self.cpp, T('    .def("$shape_method", &method_shape<$bclass, &$bclass::$shape_method>)')(locals())
 
 #
 #  In case someone decides to run this module
